# WN2640_IR_CAM

./: .gitignore
ircam_driver/: CMakeLists.txt  package.xml
ircam_driver/config/: config_ir_params.yaml  stereo_config_ir_2.yaml
ircam_driver/ircam_control/: CMakeLists.txt
ircam_driver/ircam_control/src/: ircam_cmd.cpp
ircam_driver/ircam_stream/: CMakeLists.txt
ircam_driver/ircam_stream/include/: ircam_h264_node.hpp  ircam_node.hpp
ircam_driver/ircam_stream/src/: ircam_component.cpp  ircam_h264_node.cpp  ircam_node.cpp
ircam_driver/launch/: ircam_composed.launch.py  ircam_reset_params.launch.py  stereo_ircam_composed.launch.py
scripts/: record_rosbag.sh
src/ir_cam_bringup/: CMakeLists.txt  package.xml
src/ir_cam_bringup/SDK_control/: CMakeLists.txt
src/ir_cam_bringup/SDK_control/SDK/interface/: error.h  libircmd.h
src/ir_cam_bringup/SDK_control/src/: ir_camera_cmd.cpp
src/ir_cam_bringup/config/: config_ir_params.yaml  ir_cam_params.yaml  reset_to_default_params.yaml  uart_config.yaml
src/ir_cam_bringup/launch/: ir_cam_node.launch.py  ir_cam_reset_params.launch.py
src/ircam_driver/: CMakeLists.txt
src/ircam_driver/ircam_control/: CMakeLists.txt
src/ircam_driver/ircam_stream/: CMakeLists.txt
src/ircam_driver/ircam_stream/include/: ircam_h264_node.hpp  ircam_node.hpp  v4l2_capture.hpp
src/ircam_driver/ircam_stream/src/: ircam_exec.cpp  ircam_h264_component.cpp  ircam_h264_node.cpp  ircam_node.cpp  v4l2_capture.cpp
src/ircam_driver/launch/: ircam_composed.launch.py  ircam_node.launch.py
